Article align issue.

--- a/talentum/nyteknik/css/screen.css
+++ b/talentum/nyteknik/css/screen.css
@@ -243,7 +243,7 @@ INPUT.submit {
 }
 
 .column1 {
-   padding: 0 11px 0 0;
+   padding: 5px 11px 0 0;
 }
 
 .column2,
